--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,11 @@
 
 [env:esp32-c3-devkitc-02]
 platform = espressif32
-board = esp32-c3-devkitc-02
+board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = knolleary/PubSubClient
-           suculent/ESP32httpUpdate
-           emelianov/modbus-esp8266
+lib_deps = 
+	knolleary/PubSubClient
+	suculent/ESP32httpUpdate
+	miq19/eModbus
+	bertmelis/esp32ModbusRTU
+    emelianov/modbus-esp8266
