--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+[env:esp32dev]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
-lib_deps = 
-	knolleary/PubSubClient
-	suculent/ESP32httpUpdate
-	miq19/eModbus
-	bertmelis/esp32ModbusRTU
-    emelianov/modbus-esp8266
+
+monitor_speed = 9600
+monitor_filters = esp32_exception_decoder
+
+lib_deps =
+  knolleary/PubSubClient
+  https://github.com/emelianov/modbus-esp8266.git
+
